--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
 
 header {
 position: fixed;
-top: 0px;
+top: -25px;
 width: 100%;
 
 
@@ -448,4 +448,137 @@ div.img img {
   width: 45px;
   height: 35px;
  
+}
+
+
+/*--------------------------------------------------------------------------------------loginnn-formulario---------------------------------------------------------------------------------------------*/
+
+
+
+
+
+
+
+
+
+/* End body rules */
+
+/* Start form  attributes */
+form {
+    width: 290px;
+    min-height: 500px;
+    height: auto;
+    border-radius: 5px;
+    margin: 2% auto;
+    box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
+    padding: 1%;
+    background-color:rgb(207, 181, 164);
+}
+/* form Container */
+form .con {
+    display: -webkit-flex;
+    display: flex;
+  
+    -webkit-justify-content: space-around;
+    justify-content: space-around;
+  
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+  
+      margin: 0 auto;
+}
+
+/* the header form form */
+header {
+    margin: 2% auto 10% auto;
+    text-align: center;
+}
+/* Login title form form */
+header h2 {
+    font-size: 250%;
+    font-family: 'Dancing Script';
+    color: #3e403f;
+}
+/*  A welcome message or an explanation of the login form */
+header p {letter-spacing: 0.05em;}
+
+
+
+/* //////////////////////////////////////////// */
+/* //////////////////////////////////////////// */
+
+/* inputs form  */
+input[class="form-input"]{
+    width: 200px;
+    height: 50px;
+  
+    margin-top: 2%;
+    padding: 15px;
+    
+    font-size: 16px;
+    font-family: 'Dancing Script';
+    color: #5E6472;
+
+    border: none;
+  
+    border-radius: 0px 5px 5px 0px;
+    transition: 0.2s linear;
+    
+}
+input[id="txt-input"] {width: 200px;}
+/* focus  */
+input:focus {
+    transform: translateX(-2px);
+    border-radius: 5px;
+}
+
+
+
+/* Submits */
+.submits {
+    width: 48%;
+    display: inline-block;
+    float: left;
+    margin-left: 25%;
+    margin-bottom: 30%;
+}
+
+/*       Forgot Password button FAF3DD  */
+.frgt-pass {background: transparent;}
+
+/*     Sign Up button  */
+.sign-up {background:white}
+
+
+/* buttons hover */
+button:hover {
+    transform: translatey(3px);
+    box-shadow: none;
+}
+
+/* buttons hover Animation */
+button:hover {
+    animation: ani9 0.4s ease-in-out infinite alternate;
+}
+@keyframes ani9 {
+    0% {
+        transform: translateY(3px);
+    }
+    100% {
+        transform: translateY(5px);
+    }
+}
+.log-in{
+  border-style: none;
+  text-decoration: solid;
+  font-size:'Dancing Script'; 
+  font-size: 18px;
+  background-color: #FFF;
+  border-radius: 10%;
+  padding: 2%;
+  width: 48%;
+  position: relative;
+  top: 50%;
+  margin-left: 3%;
+
 }
