--- a/views/home.html
+++ b/views/home.html
@@ -12,6 +12,8 @@
     <link href="/css/style.css" rel="stylesheet">
     <title>HELÁRTICO</title>
     <link rel="icon" href= "/images/pixlr-bg-result.png" />
+    <script src="https://kit.fontawesome.com/278943c891.js" crossorigin="anonymous"></script>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 
@@ -56,6 +58,7 @@
   <h1>HELÁRTICO</h1>
   <h3>1000 razones para elegirnos</h3>
   
+  
     <br>
     <button class="button_carrusel"><h5>SOBRE NOSOTROS</h5></button>
       </div>
@@ -64,46 +67,72 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
    <div class="container">
 
-    <a class="btn login" data-bs-toggle="offcanvas" href="#offcanvas1">
-      Login
+    <a class="btn login" data-bs-toggle="offcanvas" href="#offcanvas1"><i class="fa-solid fa-user"></i>
     </a>   
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas1">
       <div class="offcanvas-header">
-        <h3 class="offcanvas-title">Login</h3>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
+        <button type="button" class=" button.login btn-close text-reset" data-bs-dismiss="offcanvas"></button>
       </div>
       <div class="offcanvas-body">
-        <form action="resultado.html" method="POST">
-          <p>
-            <!-- campo para el nombre -->
-            <label> Usuario: </label>
-            <input type="text" name="nombre" required>
-          </p>
-    
-          
-          <p>
-            <!-- campo para la contraseña -->
-            <label> Contraseña: </label>
-            <input type="password" name="password" required>
-          </p>
-          <p>     
-            <button type="submit" class="btn btn-primary">Login </button>
-          </p>
-        </form>          
-      </div>
-    </div>    
+        <form>
+          <!--   con = Container  for items in the form-->
+          <div class="con">
+          <!--     Start  header Content  -->
+          <header class="head-form">
+             <h2>Ingresar</h2>
+          </header>
+          <br>
+          <div class="field-set">
+             <!--   user name -->
+                <span class="input-item">
+                  <i class="fa fa-user-circle"></i>
+                </span>
+               <!--   user name Input-->
+                <input class="form-input" id="txt-input" type="text" placeholder="Nombre de usuario" required>
+            
+             <br>
+            
+                  <!--   Password -->
+            
+             <span class="input-item">
+               <i class="fa fa-key"></i>
+              </span>
+             <!--   Password Input-->
+             <input class="form-input" type="password" placeholder="Contraseña" id="pwd"  name="password" required>
+            
+            
+            
+             <br>
+       <!--        buttons -->
+       <!--      button LogIn -->
+             <button class="button.login log-in"> Log In </button>
+          </div>
+         
+       <!--   other buttons -->
+          <div class="other">
+       <!--      Forgot Password button-->
+             <button class=" btn submits frgt-pass">Forgot Password</button>
+       <!--     Sign Up button -->
+             <button class="btn submits sign-up">Sign Up 
+  
+       <!--         Sign Up font icon -->
+             <i class="fa fa-user-plus" ></i>
+             </button>
+          </div>
+         </div>
+       </form>
+  
   </div>
 
     
    <div class="container">
 
-    <a class="btn register" data-bs-toggle="offcanvas" href="#offcanvas2">
-      Registrarse
-    </a>   
+    
+      
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas2">
       <div class="offcanvas-header">
         <h3 class="offcanvas-title">Registrarse</h3>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
+        
       </div>
       <div class="offcanvas-body">
         <form>
